parser/grammar/BagiParser.cpp

#include <string>
#include <vector>


// Generated from grammar/Bagi.g4 by ANTLR 4.13.2


#include "BagiListener.h"
#include "BagiVisitor.h"

#include "BagiParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BagiParserStaticData final {
  BagiParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BagiParserStaticData(const BagiParserStaticData&) = delete;
  BagiParserStaticData(BagiParserStaticData&&) = delete;
  BagiParserStaticData& operator=(const BagiParserStaticData&) = delete;
  BagiParserStaticData& operator=(BagiParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag bagiParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<BagiParserStaticData> bagiParserStaticData = nullptr;

void bagiParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (bagiParserStaticData != nullptr) {
    return;
  }
#else
  assert(bagiParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BagiParserStaticData>(
    std::vector<std::string>{
      "source", "sourceItem", "funcDef", "funcSignature", "argDefList", 
      "argDef", "typeRef", "baseType", "builtinType", "customType", "arraySuffix", 
      "statement", "varDecl", "varList", "varItem", "ifStatement", "block", 
      "whileStatement", "doWhileStatement", "breakStatement", "continueStatement", 
      "exprStatement", "expr", "assignOp", "unOp", "exprList", "literal"
    },
    std::vector<std::string>{
      "", "';'", "'('", "')'", "','", "'bool'", "'byte'", "'int'", "'uint'", 
      "'long'", "'ulong'", "'char'", "'string'", "'['", "']'", "'='", "'if'", 
      "'else'", "'{'", "'}'", "'while'", "'do'", "'break'", "'continue'", 
      "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'+='", "'-='", "'*='", "'/='", "'%='", "'!'", "'~'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER", 
      "STRING", "CHAR", "HEX", "BITS", "DEC", "BOOL", "WS", "COMMENT", "MULTICOMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  bagiParserStaticData = std::move(staticData);
}

}

BagiParser::BagiParser(TokenStream *input) : BagiParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BagiParser::BagiParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BagiParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *bagiParserStaticData->atn, bagiParserStaticData->decisionToDFA, bagiParserStaticData->sharedContextCache, options);
}

BagiParser::~BagiParser() {
  delete _interpreter;
}

const atn::ATN& BagiParser::getATN() const {
  return *bagiParserStaticData->atn;
}

std::string BagiParser::getGrammarFileName() const {
  return "Bagi.g4";
}

const std::vector<std::string>& BagiParser::getRuleNames() const {
  return bagiParserStaticData->ruleNames;
}

const dfa::Vocabulary& BagiParser::getVocabulary() const {
  return bagiParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BagiParser::getSerializedATN() const {
  return bagiParserStaticData->serializedATN;
}


//----------------- SourceContext ------------------------------------------------------------------

BagiParser::SourceContext::SourceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BagiParser::SourceItemContext *> BagiParser::SourceContext::sourceItem() {
  return getRuleContexts<BagiParser::SourceItemContext>();
}

BagiParser::SourceItemContext* BagiParser::SourceContext::sourceItem(size_t i) {
  return getRuleContext<BagiParser::SourceItemContext>(i);
}


size_t BagiParser::SourceContext::getRuleIndex() const {
  return BagiParser::RuleSource;
}

void BagiParser::SourceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSource(this);
}

void BagiParser::SourceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSource(this);
}


std::any BagiParser::SourceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitSource(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::SourceContext* BagiParser::source() {
  SourceContext *_localctx = _tracker.createInstance<SourceContext>(_ctx, getState());
  enterRule(_localctx, 0, BagiParser::RuleSource);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 562949953429472) != 0)) {
      setState(54);
      sourceItem();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SourceItemContext ------------------------------------------------------------------

BagiParser::SourceItemContext::SourceItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BagiParser::FuncDefContext* BagiParser::SourceItemContext::funcDef() {
  return getRuleContext<BagiParser::FuncDefContext>(0);
}


size_t BagiParser::SourceItemContext::getRuleIndex() const {
  return BagiParser::RuleSourceItem;
}

void BagiParser::SourceItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceItem(this);
}

void BagiParser::SourceItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceItem(this);
}


std::any BagiParser::SourceItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitSourceItem(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::SourceItemContext* BagiParser::sourceItem() {
  SourceItemContext *_localctx = _tracker.createInstance<SourceItemContext>(_ctx, getState());
  enterRule(_localctx, 2, BagiParser::RuleSourceItem);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    funcDef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

BagiParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BagiParser::FuncSignatureContext* BagiParser::FuncDefContext::funcSignature() {
  return getRuleContext<BagiParser::FuncSignatureContext>(0);
}

BagiParser::BlockContext* BagiParser::FuncDefContext::block() {
  return getRuleContext<BagiParser::BlockContext>(0);
}


size_t BagiParser::FuncDefContext::getRuleIndex() const {
  return BagiParser::RuleFuncDef;
}

void BagiParser::FuncDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDef(this);
}

void BagiParser::FuncDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDef(this);
}


std::any BagiParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::FuncDefContext* BagiParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 4, BagiParser::RuleFuncDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    funcSignature();
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BagiParser::T__17: {
        setState(63);
        block();
        break;
      }

      case BagiParser::T__0: {
        setState(64);
        match(BagiParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncSignatureContext ------------------------------------------------------------------

BagiParser::FuncSignatureContext::FuncSignatureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BagiParser::FuncSignatureContext::IDENTIFIER() {
  return getToken(BagiParser::IDENTIFIER, 0);
}

BagiParser::TypeRefContext* BagiParser::FuncSignatureContext::typeRef() {
  return getRuleContext<BagiParser::TypeRefContext>(0);
}

BagiParser::ArgDefListContext* BagiParser::FuncSignatureContext::argDefList() {
  return getRuleContext<BagiParser::ArgDefListContext>(0);
}


size_t BagiParser::FuncSignatureContext::getRuleIndex() const {
  return BagiParser::RuleFuncSignature;
}

void BagiParser::FuncSignatureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncSignature(this);
}

void BagiParser::FuncSignatureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncSignature(this);
}


std::any BagiParser::FuncSignatureContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitFuncSignature(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::FuncSignatureContext* BagiParser::funcSignature() {
  FuncSignatureContext *_localctx = _tracker.createInstance<FuncSignatureContext>(_ctx, getState());
  enterRule(_localctx, 6, BagiParser::RuleFuncSignature);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(67);
      typeRef();
      break;
    }

    default:
      break;
    }
    setState(70);
    match(BagiParser::IDENTIFIER);
    setState(71);
    match(BagiParser::T__1);
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 562949953429472) != 0)) {
      setState(72);
      argDefList();
    }
    setState(75);
    match(BagiParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgDefListContext ------------------------------------------------------------------

BagiParser::ArgDefListContext::ArgDefListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<BagiParser::ArgDefContext *> BagiParser::ArgDefListContext::argDef() {
  return getRuleContexts<BagiParser::ArgDefContext>();
}

BagiParser::ArgDefContext* BagiParser::ArgDefListContext::argDef(size_t i) {
  return getRuleContext<BagiParser::ArgDefContext>(i);
}


size_t BagiParser::ArgDefListContext::getRuleIndex() const {
  return BagiParser::RuleArgDefList;
}

void BagiParser::ArgDefListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgDefList(this);
}

void BagiParser::ArgDefListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgDefList(this);
}


std::any BagiParser::ArgDefListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitArgDefList(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::ArgDefListContext* BagiParser::argDefList() {
  ArgDefListContext *_localctx = _tracker.createInstance<ArgDefListContext>(_ctx, getState());
  enterRule(_localctx, 8, BagiParser::RuleArgDefList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    argDef();
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BagiParser::T__3) {
      setState(78);
      match(BagiParser::T__3);
      setState(79);
      argDef();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgDefContext ------------------------------------------------------------------

BagiParser::ArgDefContext::ArgDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BagiParser::ArgDefContext::IDENTIFIER() {
  return getToken(BagiParser::IDENTIFIER, 0);
}

BagiParser::TypeRefContext* BagiParser::ArgDefContext::typeRef() {
  return getRuleContext<BagiParser::TypeRefContext>(0);
}


size_t BagiParser::ArgDefContext::getRuleIndex() const {
  return BagiParser::RuleArgDef;
}

void BagiParser::ArgDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgDef(this);
}

void BagiParser::ArgDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgDef(this);
}


std::any BagiParser::ArgDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitArgDef(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::ArgDefContext* BagiParser::argDef() {
  ArgDefContext *_localctx = _tracker.createInstance<ArgDefContext>(_ctx, getState());
  enterRule(_localctx, 10, BagiParser::RuleArgDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(85);
      typeRef();
      break;
    }

    default:
      break;
    }
    setState(88);
    match(BagiParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeRefContext ------------------------------------------------------------------

BagiParser::TypeRefContext::TypeRefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BagiParser::BaseTypeContext* BagiParser::TypeRefContext::baseType() {
  return getRuleContext<BagiParser::BaseTypeContext>(0);
}

std::vector<BagiParser::ArraySuffixContext *> BagiParser::TypeRefContext::arraySuffix() {
  return getRuleContexts<BagiParser::ArraySuffixContext>();
}

BagiParser::ArraySuffixContext* BagiParser::TypeRefContext::arraySuffix(size_t i) {
  return getRuleContext<BagiParser::ArraySuffixContext>(i);
}


size_t BagiParser::TypeRefContext::getRuleIndex() const {
  return BagiParser::RuleTypeRef;
}

void BagiParser::TypeRefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeRef(this);
}

void BagiParser::TypeRefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeRef(this);
}


std::any BagiParser::TypeRefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitTypeRef(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::TypeRefContext* BagiParser::typeRef() {
  TypeRefContext *_localctx = _tracker.createInstance<TypeRefContext>(_ctx, getState());
  enterRule(_localctx, 12, BagiParser::RuleTypeRef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    baseType();
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BagiParser::T__12) {
      setState(91);
      arraySuffix();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BaseTypeContext ------------------------------------------------------------------

BagiParser::BaseTypeContext::BaseTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BagiParser::BuiltinTypeContext* BagiParser::BaseTypeContext::builtinType() {
  return getRuleContext<BagiParser::BuiltinTypeContext>(0);
}

BagiParser::CustomTypeContext* BagiParser::BaseTypeContext::customType() {
  return getRuleContext<BagiParser::CustomTypeContext>(0);
}


size_t BagiParser::BaseTypeContext::getRuleIndex() const {
  return BagiParser::RuleBaseType;
}

void BagiParser::BaseTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBaseType(this);
}

void BagiParser::BaseTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBaseType(this);
}


std::any BagiParser::BaseTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitBaseType(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::BaseTypeContext* BagiParser::baseType() {
  BaseTypeContext *_localctx = _tracker.createInstance<BaseTypeContext>(_ctx, getState());
  enterRule(_localctx, 14, BagiParser::RuleBaseType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BagiParser::T__4:
      case BagiParser::T__5:
      case BagiParser::T__6:
      case BagiParser::T__7:
      case BagiParser::T__8:
      case BagiParser::T__9:
      case BagiParser::T__10:
      case BagiParser::T__11: {
        enterOuterAlt(_localctx, 1);
        setState(97);
        builtinType();
        break;
      }

      case BagiParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(98);
        customType();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BuiltinTypeContext ------------------------------------------------------------------

BagiParser::BuiltinTypeContext::BuiltinTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BagiParser::BuiltinTypeContext::getRuleIndex() const {
  return BagiParser::RuleBuiltinType;
}

void BagiParser::BuiltinTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBuiltinType(this);
}

void BagiParser::BuiltinTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBuiltinType(this);
}


std::any BagiParser::BuiltinTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitBuiltinType(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::BuiltinTypeContext* BagiParser::builtinType() {
  BuiltinTypeContext *_localctx = _tracker.createInstance<BuiltinTypeContext>(_ctx, getState());
  enterRule(_localctx, 16, BagiParser::RuleBuiltinType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 8160) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CustomTypeContext ------------------------------------------------------------------

BagiParser::CustomTypeContext::CustomTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BagiParser::CustomTypeContext::IDENTIFIER() {
  return getToken(BagiParser::IDENTIFIER, 0);
}


size_t BagiParser::CustomTypeContext::getRuleIndex() const {
  return BagiParser::RuleCustomType;
}

void BagiParser::CustomTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCustomType(this);
}

void BagiParser::CustomTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCustomType(this);
}


std::any BagiParser::CustomTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitCustomType(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::CustomTypeContext* BagiParser::customType() {
  CustomTypeContext *_localctx = _tracker.createInstance<CustomTypeContext>(_ctx, getState());
  enterRule(_localctx, 18, BagiParser::RuleCustomType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(BagiParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArraySuffixContext ------------------------------------------------------------------

BagiParser::ArraySuffixContext::ArraySuffixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BagiParser::ArraySuffixContext::getRuleIndex() const {
  return BagiParser::RuleArraySuffix;
}

void BagiParser::ArraySuffixContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArraySuffix(this);
}

void BagiParser::ArraySuffixContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BagiListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArraySuffix(this);
}


std::any BagiParser::ArraySuffixContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BagiVisitor*>(visitor))
    return parserVisitor->visitArraySuffix(this);
  else
    return visitor->visitChildren(this);
}

BagiParser::ArraySuffixContext* BagiParser::arraySuffix() {
  ArraySuffixContext *_localctx = _tracker.createInstance<ArraySuffixContext>(_ctx, getState());
  enterRule(_localctx, 20, BagiParser::RuleArraySuffix);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(BagiParser::T__12);
    setState(106);
    match(BagiParser::T__13);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

BagiParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BagiParser::VarDeclContext* BagiParser::StatementContext::varDecl() {
  return getRuleContext<BagiParser::VarDeclContext>(0);
}

BagiParser::IfStatementContext* BagiParser::StatementContext::ifStatement() {
  return getRuleContext<BagiParser::IfStatementContext>(0);
}

BagiParser::BlockContext* BagiParser::StatementContext::block() {
  return getRuleContext<BagiParser::BlockContext>(0);
}

BagiParser::WhileStatementContext* BagiParser::StatementContext::whileStatement() {
  return getRuleContext<BagiParser::WhileStatementContext>(0);
}

BagiParser::DoWhileStatementContext* BagiParser::StatementContext::doWhileStatement() {
  return getRuleContext<BagiParser::DoWhileStatementContext>(0);
}

BagiParser::BreakStatementContext* BagiParser::StatementContext::breakStatement() {
  return getRuleContext<BagiParser::BreakStatementContext>(0);
}

BagiParser::ContinueStatementContext* BagiParser::StatementContext::continueStatement() {
  return getRuleContext<BagiParser::ContinueStatementContext>(0);
}

BagiParser::ExprStatementContext* BagiParser::StatementContext::exprStatement() {
  return getRuleContext<BagiParser::ExprStatementContext>(0);
}

